
2017-01-20  Brian Tiffin <btiffin@gnu.org>

	* tree.h: add PROCEDURE DIVISION entry convention types
	* cobc.h: add CB_CS_PROCEDURE context test value
	* parser.y: PROCEDURE DIVISION EXTERN support
	* reserved.c: EXTERN, COBOL, WINAPI context sensitive words
	* codegen.c: EXTERN program entry

2017-01-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: fixed output of error messages (result of previous change)
	  by adding and using (list_error_reverse)
	* parser.y: reactivate check PROCEDURE DIVISION returning item needs
	  to be in LINKAGE SECTION
	* codegen.c (output_internal_function): only allocate UDF RETURNING items
	  when in LINKAGE SECTION

2017-01-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: some work on program-prototypes,
	  added parsing of COBOL 2002 NESTED phrase for CALL
	* cobc.c, cobc.h, errror.c: removed error_tail and copy_tail
	* cobc.c: fixed SIGSEGV in listing on machines where char is signed
	  and COBOL sources contain characters > 127
	* cobc.c: fixed SIGSEGV in listing when compiling from multiple sources
	  which all show errors

2017-01-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h, cobc.h, parser.y: removed unused cb_statement->statement and
	  its assignment from cobc_glob_line which wasn't set at all
	* parser.y (begin_implicit_statement): copy attributes common and name
	  from current_statement when creating an implicit new current_statement

2017-01-14  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (userbp): fixed bug #350 - caused by userbp initialisation not
	  matching current cb_intrinsic_table layout.
	* tree.c (userbp), tree.h: made cb_intrinsic_table pointers const.

2017-01-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c [_MSC_VER]: swapped order of parameters for C compiler
	  and linking so that -L options come before -l
	* cobc.c: swapped order of setting and size calculation of compiler/linker