@@ -68,6 +68,9 @@ CB_FLAG (cb_flag_static_call, 0, "static-call",
 CB_FLAG_ON (cb_flag_c_decl_for_static_call, 0, "gen-c-decl-static-call",
 	 _("disable generation of C function declations for subroutines with static CALL"))
 
+CB_FLAG (cb_flag_winmain, 0, "winmain",
+	 _("generate WinMain instead of main when compiling as executable"))
+
 CB_FLAG (cb_flag_computed_goto, 0, "computed-goto",
 	 _("generate computed goto C statements"))
 
